# work-planner

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.org  configure.ac  f.scm  guix.scm  hall.scm
doc/: version.texi  work-planer.texi  work-planner.man  work-planner.texi
f/: ports.scm  re-exports.scm
scripts/: work-planner.in
tests/: filter-tests.scm
work-planner/: colours.scm  command-line.scm  date-helpers.scm  date-json.scm  filters.scm
